--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=backend
+spring.datasource.url=jdbc:postgresql://localhost:5432/ReserveBem
+spring.datasource.username=postgres
+spring.datasource.password=123456
