--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.application.name=backend
 spring.datasource.url=jdbc:postgresql://localhost:5432/ReserveBem
 spring.datasource.username=postgres
 spring.datasource.password=123456
+
+# Configurações do Hibernate
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
