--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=backend
 spring.datasource.url=jdbc:postgresql://localhost:5432/ReserveBem
 spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.password=postgres
 
 # Configurações do Hibernate
 spring.jpa.hibernate.ddl-auto=update
