--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/stack": "^6.3.27",
     "axios": "^1.6.7",
     "expo": "~50.0.11",
+    "expo-document-picker": "~11.10.1",
+    "expo-file-system": "~16.0.9",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
