--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/native-stack": "^6.9.24",
     "@react-navigation/stack": "^6.3.27",
     "axios": "^1.6.7",
-    "expo": "~50.0.11",
+    "expo": "^51.0.17",
     "expo-document-picker": "~11.10.1",
     "expo-file-system": "~16.0.9",
     "expo-print": "~12.8.1",
