--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/plugin-transform-template-literals": "^7.24.7",
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/drawer": "^6.6.13",
