--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -19,6 +19,12 @@
         <maven.compiler.target>18</maven.compiler.target>
     </properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>com.github.anastaciocintra</groupId>
+			<artifactId>escpos-coffee</artifactId>
+			<version>4.1.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
