Criação das rotas de impressão para etiquetas

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Configuração do nome da impressora termica
-printer.name = Epson
+printerTermic.name = Epson
+printerEtiqueta.name = DL-200
 
 
